add: get profile detail feature
